[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjiyama"
version = "0.0.1"
description = "helper python package for 3D image registration using the ImageJ package Fijiyama"
authors = [
  { name = "Pablo Casani-Galdon", email = "pablocasani@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.22",
    "tifffile",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/dsb-lab/pyjiyama"
"Bug Tracker" = "https://github.com/dsb-lab/pyjiyama/issues"
